--- a/cataloguefemmes.html
+++ b/cataloguefemmes.html
@@ -23,37 +23,37 @@
 <body>
     <div id="header"></div>
 
-    <main id="maincatalogue">
-        <div id="catalogue">
+    <main id="catalogue">
+        <div class="display_flex">
         <section>
             <a href="page_robes.html">
-                <div class="categorie">
-                    <h1>Robes</h1>
+                <div class="div_relative">
+                    <h2>Robes</h2>
                     <img src="images/robe_bleue_front.jpeg" alt="vetement femme robe erener" title="vetement femme robe erener">
                 </div>
             </a>    
         </section>
         <section>
             <a href="page_pulls_femmes.html">
-                <div class="categorie">
-                    <h1>Pulls</h1>
+                <div class="div_relative">
+                    <h2>Pulls</h2>
                     <img src="images/pull_cote.jpeg" alt="vetement femme pull erener" title="vetement femme pull erener">
                 </div>
             </a>    
         </section>
         <section>
             <a href="page_tshirts_femmes.html">
-                <div class="categorie">
-                    <h1>T-shirts</h1>
+                <div class="div_relative">
+                    <h2>T-shirts</h2>
                     <img src="images/tshirt_blanc_imprime_front.jpeg" alt="vetement femme t-shirt erener" title="vetement femme t-shirt erener">
                 </div>
             </a>    
         </section>
         </div>    
-        <div id="imgtoutproduits">
+        <div class="div_relative" id="img_half">
                 <a href="cataloguefemmes.html">
                     <h2>Voir tout nos produits</h2>
-                    <img class="imgcatalogue" src="images/femmes.png" alt="femmes vetement robe pull t-shirt" title="femmes vetement robe pull t-shirt">
+                    <img src="images/femmes.png" alt="femmes vetement robe pull t-shirt" title="femmes vetement robe pull t-shirt">
                 </a>
         </div>
         <section>
