--- a/contacts.html
+++ b/contacts.html
@@ -23,39 +23,16 @@
 <div id="header"></div>
 
 <main id="contacts">
-    <div class="carre">
-        <h2>Boutique - Rue des Rosiers</h2>
-        <div id="points_de_vente">
-            <div class="item_points">
-                <h3>Adresse</h3>
-                <p>7 Rue des Rosiers
-                    <br>
-                    75004 Paris
-                </p>
-            </div>
-            <div class="item_points">
-                <h3>Horaires</h3>
-                <p>Lundi à Samedi : 10h30 à 20h
-                    <br>
-                    Dimanche : 11h à 20h
-                </p>
-            </div>
-            <div class="item_points">
-                <a href="tel:+33147075065"><h3>Téléphone</h3>
-                <p>01 47 07 50 65</p></a>
-            </div>
-        </div>
-    </div>
-    <div class="votre_avis" id="contactez_nous">
+    <div class="background_white div_form">
         <h2>Contactez nous</h2>
-        <form id="champs_contacts">
+        <form>
             <input type="text" placeholder="Nom:">
             <input type="text" placeholder="Prénom:">
             <input type="text" placeholder="Entreprise:">
             <input type="email" placeholder="E-mail:">
             <input type="text" placeholder="Pays:">
             <input type="text" placeholder="Sujet:">
-            <textarea name="avis" rows="5"></textarea>
+            <textarea name="avis" rows="5" placeholder="Message:"></textarea>
             <button>Envoyer</button>
         </form>
     </div>
