--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
         <br>
         Notre boutique de vêtements eReneR
     </h1>
-    <div id="liens">
+    <div class="display_flex space_around">
         <ul>
             <li> <a href="qui_sommes_nous.html">Qui sommes nous</a> </li>
             <li> <a href="contacts.html">Contact</a></li>
@@ -24,9 +24,9 @@
         </ul>
     </div>
     <hr>
-    <div id="pied">
+    <div class="display_flex space_around">
         <p id="newsletter" ><a href="">Inscrivez-vous à la newsletter d'eReneR et recevez 10% de réduction</a></p>
-        <ul id="reseax">
+        <ul class="align_end display_inline">
             <li><a href="https://www.instagram.com/wearefromfuture/"><i class="flaticon-instagram"></i></a></li>
             <li><a href="https://www.facebook.com/wearefromfuture/?fb_dtsg_ag=AdyZPJqQjV-tfJcY4FFUpqCm29HGKN7Y02LC84VF8qSa2g%3AAdw4glyyygYDYvA1d5Sb75Pqy-bOG1EUFmlEtKDohQtY4A"><i class="flaticon-facebook"></i></a></li>
             <li><a href=""><i class="flaticon-twitter"></i></a></li>
