--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
         <label for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle"/>
         <ul class="menu">
-            <li> <a href="#"> <img id="langue" src="images/drapeau-anglais.png" alt="petit drapeau anglais"> </a> </li>
+            <li> <a href="#"> <img class="langue" src="images/drapeau-anglais.png" alt="petit drapeau anglais"> </a> </li>
             <li> <a href="moncompte.html"> <i class="flaticon-user"></i> </a></li>
             <li> <a href="#"> <i class="flaticon-heart"></i> </a> </li>
             <li> <a href="monpanier.html"> <i class="flaticon-shopping-bag"></i> </a> </li>
