--- a/page_hoodies.html
+++ b/page_hoodies.html
@@ -25,6 +25,7 @@
    
     <hr>
     <main id="page_produits">
+        <div  class="display_flex" id="display_flex">
         <aside>
             <h2>Hommes</h2>
             <ul>
@@ -34,65 +35,66 @@
                 <li><a href="cataloguehommes.html">Tout produits</a></li>
             </ul>
         </aside>
-        <div id="page_produits_right">
-            <h1>Hoodies</h1>
+        <div>
+            <h2>Hoodies</h2>
             <p>Découvrez nos hoodies iconiques. Des prints signés FROM FUTURE pour être stylé en toute circonstance. Let's join the FUTURE!</p>
-            <div class="produits_line">
-                <div>
+            <div class="display_flex flex_wrap">
+                <div class="div_img">
                     <a href="produit_hoodie_1.html">
                         <img src="images/hoodie_bleu_effet_degrade_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_2.html">
                         <img src="images/hoodie_vert_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_3.html">
                         <img src="images/hoodie_violet_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_3.html">
                         <img src="images/hoodie_violet_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_1.html">
                         <img src="images/hoodie_bleu_effet_degrade_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_2.html">
                         <img src="images/hoodie_vert_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>89€</p>
                     </a>
                 </div> 
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_2.html">
                         <img src="images/hoodie_vert_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_3.html">
                         <img src="images/hoodie_violet_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>89€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_hoodie_1.html">
                         <img src="images/hoodie_bleu_effet_degrade_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>89€</p>
                     </a>
                 </div>
             </div>  
+        </div>
         </div>
     </main>
     <section>
