--- a/page_pulls_femmes.html
+++ b/page_pulls_femmes.html
@@ -25,6 +25,7 @@
     </header>
     <hr>
     <main id="page_produits">
+        <div  class="display_flex" id="display_flex">
         <aside>
             <h2>Femmes</h2>
             <ul>
@@ -34,65 +35,66 @@
                 <li><a href="cataloguefemmes.html">Tout produits</a></li>
             </ul>
         </aside>
-        <div id="page_produits_right">
-            <h1>Pulls</h1>
+        <div>
+            <h2>Pulls</h2>
             <p>FROM FUTURE vous propose des pulls cols ronds aux coloris et aux formes audacieuses. Vous trouverez votre bonheur parmi un large choix de modèles, aux matières toujours travaillées.</p>
-            <div class="produits_line">
-                <div>
+            <div class="display_flex flex_wrap">
+                <div class="div_img">
                     <a href="produit_pull_femme_1.html">
                         <img src="images/pull_rose_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>69€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_2.html">
                         <img src="images/pull_raye_bleu_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>49€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_3.html">
                         <img src="images/pull_jaune_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>69€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_3.html">
                         <img src="images/pull_jaune_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>69€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_1.html">
                         <img src="images/pull_rose_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>69€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_2.html">
                         <img src="images/pull_raye_bleu_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>49€</p>
                     </a>
                 </div> 
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_2.html">
                         <img src="images/pull_raye_bleu_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>49€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_3.html">
                         <img src="images/pull_jaune_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>69€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_femme_1.html">
                         <img src="images/pull_rose_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>69€</p>
                     </a>
                 </div>
             </div>  
+        </div>
         </div>
     </main>
     <section>
