--- a/page_pulls_hommes.html
+++ b/page_pulls_hommes.html
@@ -25,6 +25,7 @@
     
     <hr>
     <main id="page_produits">
+        <div  class="display_flex" id="display_flex">
         <aside>
             <h2>Hommes</h2>
             <ul>
@@ -34,65 +35,66 @@
                 <li><a href="cataloguehommes.html">Tout produits</a></li>
             </ul>
         </aside>
-        <div id="page_produits_right">
-            <h1>Pulls</h1>
+        <div>
+            <h2>Pulls</h2>
             <p>Découvrez au travers de cette collection les cols ronds FROM FUTURE : des pulls en cachemire ou ice wool, en passant par des t-shirts en coton. Affirmez votre style !</p>
-            <div class="produits_line">
-                <div>
+            <div class="display_flex flex_wrap">
+                <div class="div_img">
                     <a href="produit_pull_homme_1.html">
                         <img src="images/pull_bleu_raye_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>64€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_2.html">
                         <img src="images/pull_gris_imprime.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>126€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_3.html">
                         <img src="images/pull_violet_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>84€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_3.html">
                         <img src="images/pull_violet_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>84€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_1.html">
                         <img src="images/pull_bleu_raye_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>64€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_2.html">
                         <img src="images/pull_gris_imprime.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>126€</p>
                     </a>
                 </div> 
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_2.html">
                         <img src="images/pull_gris_imprime.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>126€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_3.html">
                         <img src="images/pull_violet_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>84€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_pull_homme_1.html">
                         <img src="images/pull_bleu_raye_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>64€</p>
                     </a>
                 </div>
             </div>  
+        </div>
         </div>
     </main>
     <section>
