--- a/page_robes.html
+++ b/page_robes.html
@@ -25,6 +25,7 @@
     
     <hr>
     <main id="page_produits">
+        <div  class="display_flex" id="display_flex">
         <aside>
             <h2>Femmes</h2>
             <ul>
@@ -34,65 +35,66 @@
                 <li><a href="cataloguefemmes.html">Tout produits</a></li>
             </ul>
         </aside>
-        <div id="page_produits_right">
-            <h1>Robes</h1>
+        <div>
+            <h2>Robes</h2>
             <p>Envie de légèreté ? Des robes & jupes 100% soie pour tous les goûts. Tous nos modèles sont uniques et irrésistibles.</p>
-            <div class="produits_line">
-                <div>
+            <div class="display_flex flex_wrap">
+                <div class="div_img">
                     <a href="produit_robe_1.html">
                         <img src="images/robe_cerise_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>139€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_2.html">
                         <img src="images/robe_bleue_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>149€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_3.html">
                         <img src="images/robe_fleurs_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>139€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_3.html">
                         <img src="images/robe_fleurs_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>139€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_1.html">
                         <img src="images/robe_cerise_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>139€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_2.html">
                         <img src="images/robe_bleue_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>149€</p>
                     </a>
                 </div> 
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_2.html">
                         <img src="images/robe_bleue_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>149€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_3.html">
                         <img src="images/robe_fleurs_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>139€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_robe_1.html">
                         <img src="images/robe_cerise_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>139€</p>
                     </a>
                 </div>
             </div>  
+        </div>
         </div>
     </main>
     <section>
