--- a/points_de_vente.html
+++ b/points_de_vente.html
@@ -21,33 +21,33 @@
 <body>
     <div id="header"></div>
     
-    <main id="main_points">
-        <img id="photo_boutique" src="images/points_de_vente.jpeg" alt="boutique erener" title="boutique erener">
-        <div id="adress-map">
-            <div class="carre" id="carre">
+    <main id="points_de_vente">
+        <img src="images/points_de_vente.jpeg" alt="boutique erener" title="boutique erener">
+        <div class="display_flex">
+            <div class="width_50">
                 <h2>Boutique - Rue des Rosiers</h2>
-                <div id="points_de_vente">
-                    <div>
+                <div class="display_flex">
+                    <div class="div_inflex">
                         <h3>Adresse</h3>
                         <p>7 Rue des Rosiers
                             <br>
                             75004 Paris
                         </p>
                     </div>
-                    <div>
+                    <div class="div_inflex">
                         <h3>Horaires</h3>
                         <p>Lundi à Samedi : 10h30 à 20h
                             <br>
                             Dimanche : 11h à 20h
                         </p>
                     </div>
-                    <div>
+                    <div class="div_inflex">
                         <h3>Téléphone</h3>
                         <p>01 47 07 50 65</p>
                     </div>
                 </div>
             </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.0707200826164!2d2.358128227769788!3d48.85686182050944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66f08059b7725%3A0x87f41fe83eeb6fb1!2sFROM%20FUTURE!5e0!3m2!1sfr!2sfr!4v1624299618955!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe class="width_50" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.0707200826164!2d2.358128227769788!3d48.85686182050944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66f08059b7725%3A0x87f41fe83eeb6fb1!2sFROM%20FUTURE!5e0!3m2!1sfr!2sfr!4v1624299618955!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </main>
     <div id="footer"></div>  
