--- a/produit_hoodie_1.html
+++ b/produit_hoodie_1.html
@@ -29,7 +29,7 @@
             <img id="premierephoto" src="images/hoodie_bleu_effet_degrade_front.jpeg" alt="" >
         </div>
         <div class="left">
-            <div id="centrercontenu">
+            <div>
                 <h1>Hoodie Dip Dye Palmier
                     <br>
                     <span class="bleu">TIE AND DYE BLUE</span>
