--- a/qui_sommes_nous.html
+++ b/qui_sommes_nous.html
@@ -24,13 +24,12 @@
 <body>
     <div id="header"></div>
     
-    <main id="qui_nous">
-        <h1>Boutique de vêtement eReneR</h1>
-        <section id="concept">
-            <img class="imgrelative" src="images/concept.jpeg" alt="erener boutique vetement pull t-shirt robe hoodie soie cachemire coton" title="concept boutique vetement erener">
+    <main id="qui_sommes_nous">
+        <section >
+            <img src="images/concept.jpeg" alt="erener boutique vetement pull t-shirt robe hoodie soie cachemire coton" title="concept boutique vetement erener">
             <h2>Notre concept</h2>
-            <div class="qui_para">
-            <div>
+            <div class="display_flex">
+            <div class="div_text">
                 <h3>Un challenge impossible ?</h3>
                 <p>
                     Chez <strong>FROM FUTURE</strong> on aime bien les challenges. Quand nous avons parlé de vendre des <strong>cachemires entre 79€ et 139€</strong> dans une qualité de Luxe, tout le monde nous a assuré que c’était impossible. Vous devinez la suite... on a décidé de leur prouver le contraire.
@@ -39,7 +38,7 @@
                     
                     Selon nous, ces tours de passe-passe ne sont pas nécessaires. Prenons les produits les plus facilement comparables: nos pulls basiques (<strong>Col rond</strong>, <strong>Col V</strong> et <strong>Col roulé</strong>). Ils sont tricotés avec un fil plus épais, donc plus cher, que toutes les marques à des prix comparables. À l’arrivée nos pulls sont 20% plus lourds, ce qui signifie plus beaux, plus chauds, et qui tiennent plus longtemps.</p>
             </div>
-            <div>
+            <div class="div_text">
                 <h3>Un modèle agile, un prix réduit</h3>
                 <p>
                     Pour arriver à des prix vraiment accessibles, nous avons décidé de faire l’inverse de ce que font les autres: au lieu de réduire la qualité des produits, nous réduisons notre marge. Nous pouvons donc proposer à la fois le <strong>meilleur prix</strong>, et les produits de la plus haute qualité. A titre de comparaison, les produits de même qualité sont habituellement vendus entre 250€ et 800€ en magasin ou sur internet.
@@ -50,18 +49,18 @@
             </div>
         </div>
         </section>
-        <section id="valeurs">
-            <img class="imgrelative" src="images/valeurs.jpeg" alt="erener boutique vetement pull t-shirt robe hoodie soie cachemire coton" title="concept boutique vetement erener">
+        <section>
+            <img src="images/valeurs.jpeg" alt="erener boutique vetement pull t-shirt robe hoodie soie cachemire coton" title="concept boutique vetement erener">
             <h2>Nos valeurs</h2>
-            <div class="qui_para">
-            <div>
+            <div class="display_flex">
+            <div class="div_text">
                 <h3>Approvisionnement responsable</h3>
                 <p>
                     Notre objectif est de proposer des <strong>vêtements</strong> à la fois accessibles et éco-responsables. Comme tant d’autres aujourd’hui, nous sommes conscients des enjeux liés à l’impact des activités humaines sur l’environnement. Atteindre l’équilibre écologique, c’est aussi remettre l’humain au cœur de nos échanges. C’est pourquoi les matières premières utilisées lors de la fabrication de nos vêtements sont issues de sources d’approvisionnement durables.
 
                     Nos <strong>cachemires</strong> sont issus du pelage de chèvres élevées en Mongolie-Intérieure. La fibre est collectée par des chevriers selon des méthodes traditionnelles respectueuses de l’animal. Notre gamme de produits en <strong>coton</strong> est issue de filatures de cotons américaines dont la qualité de travail est contrôlée par un organisme à but non lucratif (Supima).</p>
             </div>
-            <div>
+            <div class="div_text">
                 <h3>Bien-être des animaux</h3>
                 <p>
                     Le bien-être des animaux est un de nos engagements principaux. Nos <strong>vêtements en cachemire</strong> sont produits à partir de fibres longues et fines prélevées sur la <strong>robe</strong> d’hiver d’une chèvre Capra Hircus à l’aide d’une technique de brossage dénuée de cruauté envers la chèvre (à l’inverse de la tonte, grande source de stress pour l’animal). Les élevages se situent en Mongolie-Intérieure, une des régions avec la plus faible densité de population au monde. Les chevriers locaux y mènent une vie nomade permettant aux chèvres de se déplacer librement à travers prairies et déserts, dans des conditions climatiques identiques à celles de leur habitat naturel. Le brossage s’effectue au printemps, une fois que les températures glaciales de l’hiver sont remontées, pour préparer l’animal aux grandes chaleurs de l’été et ainsi préserver sa santé.
@@ -70,11 +69,11 @@
             </div>
         </div>
         </section>
-        <section id="matieres">
-            <img class="imgrelative" src="images/matieres.jpeg" alt="erener boutique vetement pull t-shirt robe hoodie soie cachemire coton" title="concept boutique vetement erener">
+        <section>
+            <img src="images/matieres.jpeg" alt="erener boutique vetement pull t-shirt robe hoodie soie cachemire coton" title="concept boutique vetement erener">
             <h2>Nos matières</h2>
-            <div class="qui_para">
-            <div>
+            <div class="display_flex">
+            <div class="div_text">
                 <h3>La fibre</h3>
                 <p>
                     Notre <strong>cachemire</strong> est issu des plus beaux élevages de Mongolie Intérieure, dans le désert de Gobi, la région la plus réputée pour cette fibre naturelle et noble. La qualité du cachemire est la combinaison de trois paramètres: la finesse de la fibre, sa longueur, et sa couleur (de marron à blanc).
@@ -82,7 +81,7 @@
                     Nous sélectionnons soigneusement les meilleures fibres: les plus fines (15 microns environ), les plus longues (de 36 à 40 mm), et les plus blanches. Nous obtenons à la fin un <strong>cachemire véritablement doux</strong>, aux couleurs éclatantes, profondes et stables.
                 </p>
             </div>
-            <div>
+            <div class="div_text">
                 <h3>Le tricotage</h3>
                 <p>
                     Selon nous, il y avait sur le marché deux types de produits. Les marques anciennes, qui font des cachemires de qualité qui durent, mais serrent tant la maille que les pulls sont souvent rigides et rêches. Et les grands distributeurs, qui offrent des produits d’une qualité très inférieure, souvent allégés et où la douceur n'est pas toujours au rendez-vous.
