--- a/cataloguehommes.html
+++ b/cataloguehommes.html
@@ -23,37 +23,37 @@
 <body>
     <div id="header"></div>
    
-    <main id="maincatalogue">
-        <div id="catalogue">
+    <main id="catalogue">
+        <div class="display_flex">
         <section>
             <a href="page_hoodies.html">
-                <div class="categorie">
-                    <h1>Hooddies</h1>
+                <div class="div_relative">
+                    <h2>Hooddies</h2>
                     <img src="images/hoodie_vert_front.jpeg" alt="vetement homme hoodie erener" title="vetement homme hoodie erener">
                 </div>
             </a>    
         </section>
         <section>
             <a href="page_pulls_hommes.html">
-                <div class="categorie">
-                    <h1>Pulls</h1>
+                <div class="div_relative">
+                    <h2>Pulls</h2>
                     <img src="images/pull_violet_proch.jpeg" alt="vetement homme pull erener" title="vetement homme pull erener">
                 </div>
             </a>    
         </section>
         <section>
             <a href="page_tshirts_hommes.html">
-                <div class="categorie">
-                    <h1>T-shirts</h1>
+                <div class="div_relative">
+                    <h2>T-shirts</h2>
                     <img src="images/tshirt_bleu_palme_front.jpeg" alt="vetement homme t-shirt erener">
                 </div>
             </a>    
         </section>
         </div>
-        <div id="imgtoutproduits">
+        <div class="div_relative" id="img_half">
             <a href="cataloguehommes.html">
                 <h2>Voir tout nos produits</h2>
-                <img class="imgcatalogue" src="images/hommes.png" alt="femmes vetement robe pull t-shirt" title="femmes vetement robe pull t-shirt">
+                <img src="images/hommes.png" alt="femmes vetement robe pull t-shirt" title="femmes vetement robe pull t-shirt">
             </a>
         </div>
         <section>
