--- a/evenements.html
+++ b/evenements.html
@@ -24,9 +24,9 @@
    
     <hr>
     <main id="evenements">
-        <h1>Notre dernier événement</h1>
-        <p>
-            <iframe id="video" src="https://www.youtube.com/embed/ifzhxnB2Znk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h2>Notre dernier événement</h2>
+        <p >
+            <iframe src="https://www.youtube.com/embed/ifzhxnB2Znk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
     </main>
     <div id="footer"></div>  
