--- a/page_tshirts_hommes.html
+++ b/page_tshirts_hommes.html
@@ -25,6 +25,7 @@
    
     <hr>
     <main id="page_produits">
+        <div  class="display_flex" id="display_flex">
         <aside>
             <h2>Hommes</h2>
             <ul>
@@ -34,66 +35,67 @@
                 <li><a href="cataloguehommes.html">Tout produits</a></li>
             </ul>
         </aside>
-        <div id="page_produits_right">
-            <h1>T-shirts</h1>
+        <div>
+            <h2>T-shirts</h2>
             <p>UPGRADE YOUR BASICS
                 Classiques, imprimés ou brodés : nos Tops 100% Coton, Soie ou Ice Wool vous iront si bien.</p>
-            <div class="produits_line">
-                <div>
+            <div class="display_flex flex_wrap">
+                <div class="div_img">
                     <a href="produit_tshirt_homme_1.html">
                         <img src="images/tshirt_bleu_palme_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>49€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_2.html">
                         <img src="images/tshirt_vert_future_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>49€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_3.html">
                         <img src="images/tshirt_noir_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>39€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_3.html">
                         <img src="images/tshirt_noir_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>39€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_1.html">
                         <img src="images/tshirt_bleu_palme_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>49€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_2.html">
                         <img src="images/tshirt_vert_future_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>49€</p>
                     </a>
                 </div> 
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_2.html">
                         <img src="images/tshirt_vert_future_front.jpeg" alt="hoodie vetement homme" title="hoodie vetement homme">
                         <p>49€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_3.html">
                         <img src="images/tshirt_noir_front.jpeg" alt="pull vetement erener" title="pull vetement erener">
                         <p>39€</p>
                     </a>
                 </div>
-                <div>
+                <div class="div_img">
                     <a href="produit_tshirt_homme_1.html">
                         <img src="images/tshirt_bleu_palme_front.jpeg" alt="t-shirt vetement femme erener" title="t-shirt vetement femme erener">
                         <p>49€</p>
                     </a>
                 </div>
             </div>  
+        </div>
         </div>
     </main>
     <section>
